Charts preferences refactored to allow default chart settings and existing charts management.
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@807 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts/plugin.xml
+++ b/net.sourceforge.eclipsetrader.charts/plugin.xml
@@ -119,10 +119,14 @@
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
-            category="org.eclipse.ui.preferencePages.Appearance"
-            class="net.sourceforge.eclipsetrader.charts.preferences.ChartAppearancePrefereces"
-            id="net.sourceforge.eclipsetrader.charts.appearance"
+            class="net.sourceforge.eclipsetrader.charts.preferences.ChartsPrefereces"
+            id="net.sourceforge.eclipsetrader.charts.general"
             name="Charts"/>
+      <page
+            category="net.sourceforge.eclipsetrader.charts.general"
+            class="net.sourceforge.eclipsetrader.charts.preferences.DefaultConfigurationPage"
+            id="net.sourceforge.eclipsetrader.charts.default"
+            name="Default Settings"/>
    </extension>
    <extension
          point="org.eclipse.ui.startup">
