Refactored externalized strings
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@808 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts/plugin.properties
+++ b/net.sourceforge.eclipsetrader.charts/plugin.properties
@@ -9,98 +9,102 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-perspectiveName=Charts
-editObjectAction=Edit Object
-newIndicatorAction=New Indicator
-openChartAction=Open Chart
-chartViewName=Chart
-chartDataViewName=Chart Data
-deleteObjectAction=Delete Object
-updateChartAction=Update Chart
-updateChartTooltip=Update chart data
-lineObjectAction=Line
-lineObjectTooltip=New line
-parallelLineObjectAction=Parallel Lines
-parallelLineObjectTooltip=New Parallel lines
-horizontalLineAction=Horizontal Line
-horizontalLineTooltip=New horizontal line
-fibolineAction=FiboLine
-fibolineTooltip=New fiboline
-updateAllChartsAction=Update all Charts
+perspective.charts.name = Charts
 
-extension-point.name.indicators = Chart Indicators
-extension-point.name.objects = Chart Objects
-actionSet.label.charts = Charts
-menu.label.chart = Chart
-themeElementCategory.label.charts = Charts
-colorDefinition.label.background = Background
-colorDefinition.label.scale.background = Scale Background
-colorDefinition.label.scale.foreground = Scale Foreground
-menu.label.indicator = Indicator
-indicator.name.AD = Accumulation / Distribution - AD
-preferencePage.title.AD = Accumulation / Distribution
-indicator.name.AdaptSTOCH = Adaptive Stochastic - AdaptSTOCH
-preferencePage.title.AdaptSTOCH = Adaptive Stochastic
-indicator.name.ATR = Average True Range - ATR
-preferencePage.title.ATR = Average True Range
-indicator.name.BAR = Bars - BAR
-preferencePage.description.BAR = Set the bars type and colors
-preferencePage.title.BAR = Bars
-indicator.name.BB = Bollinger Bands - BB
-preferencePage.title.BB = Bollinger Bands
-indicator.name.CCI = Commodity Channel Index - CCI
-preferencePage.title.CCI = Commodity Channel Index
-indicator.name.DMI = Directional Movement Index - DMI
-preferencePage.title.DMI = Directional Movement Index
-indicator.name.DPO = Detrended Price Oscillator - DPO
-preferencePage.title.DPO = Detrended Price Oscillator
-indicator.name.FI = Force Index - FI
-preferencePage.title.FI = Force Index
-indicator.name.LINE = Lines - LINE
-preferencePage.description.LINE = Set the line input field and color
-preferencePage.title.LINE = Line
-indicator.name.THERM = Market Thermometer - THERM
-preferencePage.description.THERM = Set the market thermometer parameters
-preferencePage.title.THERM = Market Thermometer
-indicator.name.MA = Moving Average - MA
-preferencePage.description.MA = Set the moving average parameters
-preferencePage.title.MA = Moving Average
-indicator.name.MACD = Moving Average Convergence Divergence - MACD
-preferencePage.title.MACD = MACD
-indicator.name.MAOSC = Moving Average Oscillator - MAOSC
-preferencePage.title.MAOSC = Moving Average Oscillator
-indicator.name.RSI = Relative Strength Index - RSI
-preferencePage.title.RSI = RSI
-indicator.name.SAR = Parabolic SAR - SAR
-preferencePage.title.SAR = Parabolic SAR
-indicator.name.STOCH = Stochastic - STOCH
-preferencePage.title.STOCH = Stochastic
-indicator.name.VOL = Volume - VOL
-preferencePage.description.VOL = Set the volume bar colors
-preferencePage.title.VOL = Volume
-indicator.name.VT = Volume Trends - VT
-preferencePage.title.VT = Volume Trends
-indicator.name.SD = Standard Deviation - SD
-preferencePage.title.SD = Standard Deviation
-indicator.name.ROC = Rate Of Change - ROC
-preferencePage.title.ROC = Rate Of Change
-indicator.name.VIDYA = Tushar Chande's Vidya - VIDYA
-preferencePage.title.VIDYA = Tushar Chande's Vidya
-indicator.name.VFI = Volume Flow Indicator - VFI
-preferencePage.title.VFI = Volume Flow Indicator
-indicator.name.UO = Ultimate Oscillator - UO
-preferencePage.title.UO = Ultimate Oscillator
-indicator.name.MACH = Moving Average Channels - MACH
-preferencePage.title.MACH = Moving Average Channels
-object.name.line = Line
-preferencePage.title.line = Line
-object.name.horizontalLine = Horizontal Line
-preferencePage.title.horizontalLine = Horizontal Line
-object.name.fiboline = FiboLine
-preferencePage.title.fiboline = FiboLine
-object.name.sellArrow = Sell Arrow
-object.name.buyArrow = Buy Arrow
-object.name.fibonacciFan = Fibonacci Fan Lines
-preferencePage.title.fibonacciFan = Fibonacci Fan Lines
-object.name.parallelLines = Parallel Lines
-preferencePage.title.parallelLines = Parallel Lines
+view.chart.name=Chart
+view.chartData.name = Chart Data
+
+actionSet.charts.label = Charts
+actionSet.menu.chart.label = Chart
+
+action.deleteChart.label = Delete Chart
+action.deleteObject.label = Delete Object
+action.editObject.label = Edit Object
+action.newIndicator.label = New Indicator...
+action.openChart.label = Open Chart
+action.updateAllCharts.label = Update all Charts
+action.updateChart.label = Update Chart
+action.updateChart.tooltip = Update chart data
+
+theme.category.charts.label = Charts
+theme.color.background.label = Background
+theme.color.scale.background.label = Scale Background
+theme.color.scale.foreground.label = Scale Foreground
+
+preferencePage.charts.name = Charts
+preferencePage.defaultSettings.name = Default Settings
+
+indicator.AdaptSTOCH.name = Adaptive Stochastic - AdaptSTOCH
+indicator.AdaptSTOCH.preferencesPage.title = Adaptive Stochastic
+indicator.AD.name = Accumulation / Distribution - AD
+indicator.AD.preferencesPage.title = Accumulation / Distribution
+indicator.ATR.name = Average True Range - ATR
+indicator.ATR.preferencesPage.title = Average True Range
+indicator.BAR.name = Bars - BAR
+indicator.BAR.preferencesPage.title = Bars
+indicator.BAR.preferencesPage.description = Set the bars type and colors
+indicator.BB.name = Bollinger Bands - BB
+indicator.BB.preferencesPage.title = Bollinger Bands
+indicator.CCI.name = Commodity Channel Index - CCI
+indicator.CCI.preferencesPage.title = Commodity Channel Index
+indicator.DMI.name = Directional Movement Index - DMI
+indicator.DMI.preferencesPage.title = Directional Movement Index
+indicator.DPO.name = Detrended Price Oscillator - DPO
+indicator.DPO.preferencesPage.title = Detrended Price Oscillator
+indicator.FI.name = Force Index - FI
+indicator.FI.preferencesPage.title = Force Index
+indicator.LINE.name = Lines - LINE
+indicator.LINE.preferencesPage.title = Line
+indicator.LINE.preferencesPage.description = Set the line input field and color
+indicator.MACD.name = Moving Average Convergence Divergence - MACD
+indicator.MACD.preferencesPage.title = MACD
+indicator.MACH.name = Moving Average Channels - MACH
+indicator.MACH.preferencesPage.title = Moving Average Channels
+indicator.MA.name = Moving Average - MA
+indicator.MA.preferencesPage.title = Moving Average
+indicator.MA.preferencesPage.description = Set the moving average parameters
+indicator.MAOSC.name = Moving Average Oscillator - MAOSC
+indicator.MAOSC.preferencesPage.title = Moving Average Oscillator
+indicator.ROC.name = Rate Of Change - ROC
+indicator.ROC.preferencesPage.title = Rate Of Change
+indicator.RSI.name = Relative Strength Index - RSI
+indicator.RSI.preferencesPage.title = RSI
+indicator.SAR.name = Parabolic SAR - SAR
+indicator.SAR.preferencesPage.title = Parabolic SAR
+indicator.SD.name = Standard Deviation - SD
+indicator.SD.preferencesPage.title = Standard Deviation
+indicator.STOCH.name = Stochastic - STOCH
+indicator.STOCH.preferencesPage.title = Stochastic
+indicator.THERM.name = Market Thermometer - THERM
+indicator.THERM.preferencesPage.title = Market Thermometer
+indicator.THERM.preferencesPage.description = Set the market thermometer parameters
+indicator.UO.name = Ultimate Oscillator - UO
+indicator.UO.preferencesPage.title = Ultimate Oscillator
+indicator.VFI.name = Volume Flow Indicator - VFI
+indicator.VFI.preferencesPage.title = Volume Flow Indicator
+indicator.VIDYA.name = Tushar Chande's Vidya - VIDYA
+indicator.VIDYA.preferencesPage.title = Tushar Chande's Vidya
+indicator.VOL.name = Volume - VOL
+indicator.VOL.preferencesPage.title = Volume
+indicator.VOL.preferencesPage.description = Set the volume bar colors
+indicator.VT.name = Volume Trends - VT
+indicator.VT.preferencesPage.title = Volume Trends
+
+object.buyArrow.name = Buy Arrow
+object.fiboline.name = FiboLine
+object.fiboline.preferencesPage.title = FiboLine
+object.fiboline.action.label = FiboLine
+object.fiboline.action.tooltip = New fiboline
+object.fibonacciFan.name = Fibonacci Fan Lines
+object.fibonacciFan.preferencesPage.title = Fibonacci Fan Lines
+object.horizontalLine.name = Horizontal Line
+object.horizontalLine.preferencesPage.title = Horizontal Line
+object.horizontalLine.action.label = Horizontal Line
+object.horizontalLine.action.tooltip = New horizontal line
+object.line.name = Line
+object.line.preferencesPage.title = Line
+object.line.action.label=Line
+object.line.action.tooltip=New line
+object.parallelLines.name = Parallel Lines
+object.parallelLines.preferencesPage.title = Parallel Lines
+object.sellArrow.name = Sell Arrow
