1608085: Watchlist (MarketValue column) http://sourceforge.net/tracker/?group_id=116488&func=detail&atid=674949&aid=1608085
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@825 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.trading/plugin.xml
+++ b/net.sourceforge.eclipsetrader.trading/plugin.xml
@@ -640,6 +640,11 @@
                id="watchlist.volume"
                name="Volume"
                orientation="right"/>
+         <provider
+               class="net.sourceforge.eclipsetrader.trading.internal.watchlist.MarketValue"
+               id="watchlist.marketValue"
+               name="Market Val."
+               orientation="right"/>
       </viewContribution>
       <viewContribution
             id="orders.standardColumns"
