1608087: Watchlist (BookValue Column) http://sourceforge.net/tracker/?group_id=116488&func=detail&atid=674949&aid=1608087
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@826 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.trading/plugin.xml
+++ b/net.sourceforge.eclipsetrader.trading/plugin.xml
@@ -645,6 +645,11 @@
                id="watchlist.marketValue"
                name="Market Val."
                orientation="right"/>
+         <provider
+               class="net.sourceforge.eclipsetrader.trading.internal.watchlist.BookValue"
+               id="watchlist.bookValue"
+               name="Book Val."
+               orientation="right"/>
       </viewContribution>
       <viewContribution
             id="orders.standardColumns"
