Add expire date column to orders view
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@837 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.trading/plugin.xml
+++ b/net.sourceforge.eclipsetrader.trading/plugin.xml
@@ -665,6 +665,11 @@
                name="Date / Time"
                orientation="left"/>
          <provider
+               class="net.sourceforge.eclipsetrader.trading.internal.orders.ExpireDateColumn"
+               id="ordersView.expireDate"
+               name="Expire"
+               orientation="right"/>
+         <provider
                class="net.sourceforge.eclipsetrader.trading.internal.orders.FilledQuantityColumn"
                id="ordersView.filledQuantity"
                name="Filled Qty."
