Global update for release
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@843 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.opentick/build.properties
+++ b/net.sourceforge.eclipsetrader.opentick/build.properties
@@ -6,4 +6,4 @@ bin.includes = META-INF/,\
                icons/,\
                data/,\
                epl-v10.html,\
-               lib/OTFeed.jar
+               lib/
