--- a/net.sourceforge.eclipsetrader/plugin_customization.ini
+++ b/net.sourceforge.eclipsetrader/plugin_customization.ini
@@ -1,6 +1,7 @@
 org.eclipse.ui/DOCK_PERSPECTIVE_BAR=topRight
 org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP=false
 org.eclipse.ui/SHOW_TRADITIONAL_STYLE_TABS=false
+org.eclipse.ui/ENABLE_ANIMATIONS=false
 org.eclipse.ui/defaultPerspectiveId=net.sourceforge.eclipsetrader
 org.eclipse.update.core/org.eclipse.update.core.updateVersions=compatible
 net.sourceforge.eclipsetrader.core/UPDATE_HISTORY_ONCE=true
