Dependencies updated to use Apache Commons and Log4j plugins.
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@865 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.fix/build.properties
+++ b/net.sourceforge.eclipsetrader.fix/build.properties
@@ -1,7 +1,7 @@
-source.. = src/
+source.plugin.jar = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .,\
+               plugin.jar,\
                epl-v10.html,\
                etc/,\
                plugin.xml,\
