--- a/net.sourceforge.eclipsetrader.core/src/log4j.properties
+++ b/net.sourceforge.eclipsetrader.core/src/log4j.properties
@@ -5,8 +5,9 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 ### direct log messages to file eclipsetrader.log ###
-log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.File=${workspace_loc}/activity.log
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.File=${workspace_loc}/.metadata/.log
+log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
