--- a/net.sourceforge.eclipsetrader.news/build.properties
+++ b/net.sourceforge.eclipsetrader.news/build.properties
@@ -1,7 +1,7 @@
-source.. = src/
+source.plugin.jar = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .,\
+               plugin.jar,\
                plugin.xml,\
                icons/,\
                lib/,\
