--- a/net.sourceforge.eclipsetrader.yahoo/build.properties
+++ b/net.sourceforge.eclipsetrader.yahoo/build.properties
@@ -1,7 +1,7 @@
-source.. = src/
+source.plugin.jar = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .,\
+               plugin.jar,\
                plugin.xml,\
                epl-v10.html,\
                categories.xml,\
