Dependencies updated to use Rome and Rome Fetcher plugins.
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@880 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.news/build.properties
+++ b/net.sourceforge.eclipsetrader.news/build.properties
@@ -1,8 +1,7 @@
-source.plugin.jar = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               plugin.jar,\
                plugin.xml,\
                icons/,\
-               lib/,\
-               plugin.properties
+               plugin.properties,\
+               .
+source.. = src/
