[yahoo.news] Improved Italian news provider
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@891 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.yahoo/plugin.xml
+++ b/net.sourceforge.eclipsetrader.yahoo/plugin.xml
@@ -54,6 +54,11 @@
             class="net.sourceforge.eclipsetrader.yahoo.preferences.FrenchNewsPreferencesPage"
             id="net.sourceforge.eclipsetrader.yahoo.news.france"
             name="Yahoo! France"/>
+      <page
+            category="net.sourceforge.eclipsetrader.news"
+            class="net.sourceforge.eclipsetrader.yahoo.preferences.ItalianNewsPreferencesPage"
+            id="net.sourceforge.eclipsetrader.yahoo.news.italy"
+            name="Yahoo! Italia"/>
    </extension>
    <extension
          point="net.sourceforge.eclipsetrader.core.feeds">
