Added italian news default settings
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@896 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin_customization.ini
+++ b/net.sourceforge.eclipsetrader/plugin_customization.ini
@@ -14,3 +14,8 @@ net.sourceforge.eclipsetrader.yahoo/mostpopular=true
 net.sourceforge.eclipsetrader.yahoo/topstories=true
 net.sourceforge.eclipsetrader.yahoo/upgradesdowngrades=true
 net.sourceforge.eclipsetrader.yahoo/usmarkets=true
+net.sourceforge.eclipsetrader.yahoo/it.agenda=true
+net.sourceforge.eclipsetrader.yahoo/it.finance_top_business=true
+net.sourceforge.eclipsetrader.yahoo/it.mib30=true
+net.sourceforge.eclipsetrader.yahoo/it.nasdaq=true
+net.sourceforge.eclipsetrader.yahoo/it.ratings=true
